PP-6259 Return charge status to frontend when 3DS auth declined
When a call to /v1/frontend/charges/{chargeId}/3ds results in the
payment’s authorisation being rejected, return a 400 with a body
containing the response, rather than just a generic error message.

Before:

{
  "error_identifier": "GENERIC",
  "message": "This transaction was declined."
}

After:

{
  "status": "AUTHORISATION REJECTED"
}

This makes 400 responses consistent with 200 responses. Only
frontend uses this endpoint.

with @SandorArpa